; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/input/touchscreen/extr_tsc2007.c_tsc2007_irq.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/input/touchscreen/extr_tsc2007.c_tsc2007_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tsc2007 = type { i32 (...)*, i32, i32, i32 (...)* }

@TS_POLL_DELAY = common dso_local global i32 0, align 4
@IRQ_HANDLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @tsc2007_irq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tsc2007_irq(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.tsc2007*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.tsc2007*
  store %struct.tsc2007* %7, %struct.tsc2007** %5, align 8
  %8 = load %struct.tsc2007*, %struct.tsc2007** %5, align 8
  %9 = getelementptr inbounds %struct.tsc2007, %struct.tsc2007* %8, i32 0, i32 3
  %10 = load i32 (...)*, i32 (...)** %9, align 8
  %11 = icmp ne i32 (...)* %10, null
  br i1 %11, label %12, label %19

12:                                               ; preds = %2
  %13 = load %struct.tsc2007*, %struct.tsc2007** %5, align 8
  %14 = getelementptr inbounds %struct.tsc2007, %struct.tsc2007* %13, i32 0, i32 3
  %15 = load i32 (...)*, i32 (...)** %14, align 8
  %16 = call i32 (...) %15()
  %17 = call i64 @likely(i32 %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %29

19:                                               ; preds = %12, %2
  %20 = load %struct.tsc2007*, %struct.tsc2007** %5, align 8
  %21 = getelementptr inbounds %struct.tsc2007, %struct.tsc2007* %20, i32 0, i32 2
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @disable_irq_nosync(i32 %22)
  %24 = load %struct.tsc2007*, %struct.tsc2007** %5, align 8
  %25 = getelementptr inbounds %struct.tsc2007, %struct.tsc2007* %24, i32 0, i32 1
  %26 = load i32, i32* @TS_POLL_DELAY, align 4
  %27 = call i32 @msecs_to_jiffies(i32 %26)
  %28 = call i32 @schedule_delayed_work(i32* %25, i32 %27)
  br label %29

29:                                               ; preds = %19, %12
  %30 = load %struct.tsc2007*, %struct.tsc2007** %5, align 8
  %31 = getelementptr inbounds %struct.tsc2007, %struct.tsc2007* %30, i32 0, i32 0
  %32 = load i32 (...)*, i32 (...)** %31, align 8
  %33 = icmp ne i32 (...)* %32, null
  br i1 %33, label %34, label %39

34:                                               ; preds = %29
  %35 = load %struct.tsc2007*, %struct.tsc2007** %5, align 8
  %36 = getelementptr inbounds %struct.tsc2007, %struct.tsc2007* %35, i32 0, i32 0
  %37 = load i32 (...)*, i32 (...)** %36, align 8
  %38 = call i32 (...) %37()
  br label %39

39:                                               ; preds = %34, %29
  %40 = load i32, i32* @IRQ_HANDLED, align 4
  ret i32 %40
}

declare dso_local i64 @likely(i32) #1

declare dso_local i32 @disable_irq_nosync(i32) #1

declare dso_local i32 @schedule_delayed_work(i32*, i32) #1

declare dso_local i32 @msecs_to_jiffies(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
